# Explore-our-work

./: README.md  The final list.csv  data_clean.ipynb  duolingo_acceptance.csv  method1.py  method2.ipynb  method3.py
Advertising to Targeted Institutions/: pyproject.toml
Advertising to Targeted Institutions/src/: __mail__.py
Advertising to Targeted Institutions/src/auto_send_mail/: Mail.py
Advertising to Targeted Institutions/tests/: test_mail.py
Dynamic Institution Tracking and Updates/: method1.py  method3.py
Identifying Potential Institutions/: predication.ipynb  train_test_data.xlsx
Integrated Database/: create tables and import.sql  create_tables  det_acceptance.csv  import_locations  institusions.csv
Intergrated Database/: Duolingo project.sql
