[project]
name = "auto-send-mail"
version = "0.1.0"
description = ""
authors = [
    {name = "JingfengS",email = "jingfeng050106@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "auto_send_mail", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
